fix: add in scrollbar style for leaflet map solution

--- a/src/components/maps/_control-layers.scss
+++ b/src/components/maps/_control-layers.scss
@@ -73,4 +73,8 @@
     position: relative;
     font-family: $govuk-font-family;
   }
+
+  .smbc-control-layers--scrollbar {
+    overflow: scroll;
+  }
 }
